utilisation de tailwind, quel pépite. Ajout de différents paramètres. On touche à la fin pour le front ! il restera la page Orders mais c'est rapide

--- a/src/_COMPONENTS/LOGICBLOCK/logicBlock.css
+++ b/src/_COMPONENTS/LOGICBLOCK/logicBlock.css
@@ -60,12 +60,14 @@
     position: static;
 }
 
+.variable-container .w2p-input {
+    max-width: 130px !important;
+}
 
 .variable-container {
     position: relative;
     padding: 7px 12px;
     border-radius: var(--border-radius-1);
-    max-width: 175px;
     min-width: 100px;
     height: 44px;
     display: flex;
