MAJOR UPDATE !!! Mob X is now working | saving parameters is now working

--- a/src/_COMPONENTS/METAKEYS/MetaKeysCategories.css
+++ b/src/_COMPONENTS/METAKEYS/MetaKeysCategories.css
@@ -24,7 +24,7 @@
     font-weight: 300;
 }
 
-.meta-key .meta-key-example {
+.meta-key .meta-key-exemple {
     font-style: italic;
     border-top: 1px solid rgba(0,0,0,0.2);
     margin-top: 5px;
