--- a/src/_COMPONENTS/METAKEYS/MetaKeysCategories.css
+++ b/src/_COMPONENTS/METAKEYS/MetaKeysCategories.css
@@ -8,7 +8,7 @@
     flex-wrap: wrap;
 }
 
-.meta-container .meta-key {
+.meta-key {
     padding: 7px 12px;
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: var(--border-radius-1);
