optimisation de l'interface - la taille des inputs des variables dépend du text lui même

--- a/src/_COMPONENTS/FORMS/INPUT/input/input.css
+++ b/src/_COMPONENTS/FORMS/INPUT/input/input.css
@@ -20,7 +20,7 @@
 }
 
 .w2p-input input[type=text] {
-    padding: 11px 10px !important;
+    padding: 11px 10px;
     font-size: 0.75rem;
     border: var(--border-1);
     border-radius: 5px;
