--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@
     z-index: -1;
     background: rgb(103, 67, 153);
     filter: blur(100px);
-    background: linear-gradient(117deg, rgba(103, 67, 153, 1) 0%, rgba(215, 249, 211, 1) 100%);
+    background: url("/public/images/bg-main-colors.jpg");
     opacity: 0.3;
 }
 
