optimisation de l'environnement pour l'adapter au déploiment (gestion du cash, des paths, de l'ux...)

--- a/src/index.css
+++ b/src/index.css
@@ -18,26 +18,20 @@
 }
 
 
-
-#wpcontent::after {
-    content: "ok";
-    position: absolute;
+#w2p-background {
+    position: fixed;
     top: 0;
     left: 0;
-    bottom: 0px;
-    right: 0px;
-    z-index: -1;
-    background: rgb(103, 67, 153);
-    filter: blur(100px);
-    background: url("/public/images/bg-main-colors.jpg");
-    opacity: 0.3;
-}
-
-#wpcontent {
+    bottom: 0;
+    right: 0;
     padding-left: 0 !important;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     overflow-x: hidden;
+    opacity: 0.4;
+    z-index: -1;
 }
-
 
 #w2p-app {
     width: 98%;
@@ -48,6 +42,8 @@
     box-shadow: 0 0 20px 7px rgba(0, 0, 0, 0.2);
     transition: height 0.2s ease-in;
     min-height: 500px;
+    z-index: 1;
+    position: relative;
 }
 
 .w2p-app-content {
@@ -127,7 +123,6 @@
     width: 1rem;
     min-width: 16px;
     height: 1rem;
-    background-color: rgb(30, 30, 30);
 }
 
 #w2p-app select {
@@ -516,7 +511,7 @@ input[type="number"] {
 
 /***************************************** SECTIONS *********************************************/
 
-.nav-bottom-section {
+/* .nav-bottom-section {
     position: fixed;
     bottom: 0;
     left: 0;
@@ -529,7 +524,7 @@ input[type="number"] {
     justify-content: flex-end;
     box-shadow: 0 0 30px 10px rgba(255, 255, 255, 0.6);
     border: 1px solid rgba(0, 0, 0, 0.05);
-}
+} */
 
 /****************** MARGIN ************************/
 
