--- a/src/_COMPONENTS/GENERAL/Popup/popup.css
+++ b/src/_COMPONENTS/GENERAL/Popup/popup.css
@@ -10,7 +10,7 @@
     padding: 7px 15px;
     border-radius: var(--border-radius-1);
     opacity: 1;
-    overflow: hidden;
+    /* overflow: hidden; */
     transition: opacity 0.7s linear, max-width 0.2s linear;
     resize: horizontal;
     cursor: auto;
