--- a/src/_COMPONENTS/GENERAL/ProgressBar/ProgressBar.css
+++ b/src/_COMPONENTS/GENERAL/ProgressBar/ProgressBar.css
@@ -1,8 +1,8 @@
 .progress-bar-container {
     width: 100%;
-    height: 30px;
+    height: 20px;
     background-color: #e0e0df;
-    border-radius: 50px;
+    border-radius: 3px;
     overflow: hidden;
     /* position: relative; */
 }
@@ -16,8 +16,9 @@
 .progress-fill {
     height: 100%;
     background-color: var(--w2p-secondary-color);
-    border-radius: 50px 0 0 50px;
+    border-radius: 3px 0 0 2px;
     display: flex;
+    width: 0%;
     align-items: center;
     justify-content: start;
     font-weight: bold;
@@ -34,7 +35,6 @@
 .highlight {
     position: absolute;
     top: 0;
-
     left: -100px;
     right: 100%;
     width: 100px;
