--- a/src/_COMPONENTS/GENERAL/Notification/Notification.css
+++ b/src/_COMPONENTS/GENERAL/Notification/Notification.css
@@ -1,6 +1,6 @@
 .notification-container {
     position: fixed;
-    bottom: 70px;
+    top: 20px;
     right: 15px;
     z-index: 1000000;
     display: flex;
@@ -10,9 +10,9 @@
 
 .notification {
     width: 350px;
-    background-color: rgba(51, 51, 51);
+    background-color: rgba(30, 30, 30);
     border-radius: 5px;
-    box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.3);
     padding: 10px;
     transition: all 0.2s;
 }
