--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow: auto !important;
+  padding-right: 0px !important;
+}
+
 #w2p-app {
   /* background: #f0f0f1; */
   /* color: #3c434a; */
